<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterUser">

  <TextView
      android:id="@+id/banner"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
      android:fontFamily="sans-serif-black"
      android:text="@string/Banner_Register_User"
      android:textAlignment="center"
      android:textColor="@color/black"
      android:textSize="40sp"
      android:textStyle="italic" />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/til_register_user"
      style="@style/TextInputLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginTop="140dp"
      android:layout_marginEnd="20dp"
      android:hint="@string/Register_User"
      android:padding="5dp"
      android:textColorHint="@color/black"
      app:hintTextColor="@color/black">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiet_register_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/correo"
        android:drawablePadding="25dp"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="14sp" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/til_register_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:layout_marginTop="1dp"
      style="@style/TextInputLayout"
      app:helperText="*Requerido*"
      android:hint="@string/Register_name"
      android:padding="5dp"
      android:textColorHint="@color/black"
      app:hintTextColor="@color/black"
      android:layout_below="@+id/til_register_user">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiet_register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="25dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="14sp" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/til_register_phone"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:layout_marginTop="1dp"
      style="@style/TextInputLayout"
      android:hint="@string/Register_Number"
      android:padding="5dp"
      android:textColorHint="@color/black"
      app:hintTextColor="@color/black"
      android:layout_below="@+id/til_register_name">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiet_register_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_local_phone_24"
        android:drawablePadding="25dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        />
  </com.google.android.material.textfield.TextInputLayout>


  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/til_register_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/til_register_phone"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:layout_marginTop="1dp"
      style="@style/TextInputLayout"
      android:hint="@string/register_password_hint"
      android:padding="5dp"
      android:textColorHint="@color/black"
      app:hintTextColor="@color/black">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiet_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:drawablePadding="25dp"
        android:drawableLeft="@drawable/ic_baseline_info_24"
        android:textColorHint="@color/black"
        android:textSize="14sp"/>
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/til_register_confirm_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/til_register_password"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:layout_marginTop="1dp"
      style="@style/TextInputLayout"
      android:hint="@string/register_confirm_password_hint"
      android:padding="5dp"
      android:textColorHint="@color/black"
      app:hintTextColor="@color/black">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiet_register_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="25dp"
        android:importantForAutofill="no"
        android:drawableLeft="@drawable/ic_baseline_info_24"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="14sp"/>
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/til_register_direction"

      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:layout_marginTop="1dp"
      style="@style/TextInputLayout"
      android:hint="@string/Register_Direction"
      android:padding="5dp"
      android:textColorHint="@color/black"
      app:hintTextColor="@color/black"
      android:layout_below="@+id/til_register_confirm_password">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiet_register_direction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text"
        android:drawableLeft="@drawable/house"
        android:textColor="@color/black"
        android:drawablePadding="25dp"
        android:textColorHint="@color/black"
        android:textSize="14sp"/>
  </com.google.android.material.textfield.TextInputLayout>


  <Button
      android:id="@+id/registerButton"
      android:layout_width="280dp"
      android:layout_height="wrap_content"
      android:layout_below="@+id/til_register_direction"
      android:layout_centerHorizontal="true"
      android:layout_marginStart="20dp"
      android:layout_marginTop="2dp"
      android:layout_marginEnd="20dp"
      android:text="@string/button_login_get"
      android:textAllCaps="false"
      android:textColor="@color/white" />

  <TextView
      android:id="@+id/Login_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/registerButton"
      android:layout_marginTop="15dp"
      android:text="@string/message_login_register"
      android:textAlignment="center"
      android:textAllCaps="false"
      android:textColor="@color/black"
      android:textSize="18sp" />
  
  <ProgressBar
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:id="@+id/progress_bar_loading"
      android:indeterminate="true"
      android:indeterminateDrawable="@drawable/rotare_progress"
      android:visibility="gone"/>

  </RelativeLayout>